--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,9 +1,11 @@
 ---
 layout: page
 permalink: /404.html
-title: "Page not found"
-description: "Looks like there has been a mistake. Nothing exists here."
-redirect: true
+title: "nothing to do here"
+description: ""
+redirect: false
 ---
 
-You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
+"Say 404 again. I dare you. I double dare you!"
+
+[home page]({{ site.baseurl | prepend: site.url }}).
